# MeshSimplifier

./: CMakeLists.txt  README.md
include/: CcMeshSim.h  export.h  quadric_simp.h  quadric_tex_simp.h
src/: CMakeLists.txt  CcMeshSim.cpp  quadric_simp.cpp  quadric_tex_simp.cpp
test/: CMakeLists.txt
test/testMeshSim/: CMakeLists.txt  testMeshSim.cpp
